--- a/style.css
+++ b/style.css
@@ -447,17 +447,13 @@ form.sign-in-form {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff; /* Adjust background color */
+  background-color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Ensure it stays on top */
-  transition: opacity 1s ease; /* Fade-out transition duration */
-  opacity: 1; /* Initially fully visible */
-}
-
-.fade-out {
-  opacity: 0; /* Fades out the loader */
+  z-index: 9999; /* Keep it on top */
+  transition: opacity 1s ease; /* 1-second fade-out transition */
+  opacity: 1; /* Initially visible */
 }
 
 .eye {
