--- a/style.css
+++ b/style.css
@@ -443,17 +443,20 @@ form.sign-in-form {
 
 #loader {
   position: fixed;
-  left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: white; /* Or any color */
+  z-index: 9999; /* Make sure it's on top */
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Keep it on top */
-  transition: opacity 1s ease; /* 1-second fade-out transition */
-  opacity: 1; /* Initially visible */
+  transition: opacity 1s ease; /* For fade-out effect */
+}
+
+#loader.hidden {
+  opacity: 0;
 }
 
 .fade-out {
