--- a/style.css
+++ b/style.css
@@ -51,10 +51,15 @@ form {
   grid-row: 1 / 2;
 }
 
+.modal-dialog {
+  top: 20%;
+}
 
 form.sign-up-form {
   opacity: 0;
   z-index: 1;
+  transform: ''; /* Start slightly lower */
+  transition: '';
 }
 
 form.sign-in-form {
@@ -148,9 +153,29 @@ form.sign-in-form {
   transition: 0.5s;
 }
 
+.btn1 {
+  width: 100px;
+  background-color: #5995fd;
+  border: none;
+  outline: none;
+  height: 30px;
+  border-radius: 49px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 10px 0;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
 .btn:hover {
   background-color: #4d84e2;
 }
+
+.btn1:hover {
+  background-color: #4d84e2;
+}
+
 .panels-container {
   position: absolute;
   height: 100%;
@@ -222,6 +247,16 @@ form.sign-in-form {
   background: none;
   border: 2px solid #fff;
   width: 130px;
+  height: 41px;
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+
+.btn1.transparent {
+  margin: 0;
+  background: none;
+  border: 2px solid #fff;
+  width: 100px;
   height: 41px;
   font-weight: 600;
   font-size: 0.8rem;
@@ -332,6 +367,12 @@ form.sign-in-form {
 
   .btn.transparent {
     width: 110px;
+    height: 35px;
+    font-size: 0.7rem;
+  }
+
+  .btn1.transparent {
+    width: 70px;
     height: 35px;
     font-size: 0.7rem;
   }
@@ -458,6 +499,13 @@ form.sign-in-form {
 #loader.hidden {
   opacity: 0;
   transition: opacity 1s ease-in-out;
+}
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+  display: block;
 }
 
 .eye {
